<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/fab_margin"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingTop="@dimen/fab_margin"
    android:background="@color/menu4BGColor"
    tools:context="com.example.tanushreechaubal.musicmania.StoreActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_labelMusicStore"
        android:text="@string/store"
        android:textSize="@dimen/specialCase_textSize"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_storeActivity_details"
        android:layout_below="@+id/textView_labelMusicStore"
        android:text="@string/textView_storeActivity_details"
        android:textSize="@dimen/textSize"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/setUpPayment_Button"
        android:text="@string/payment"
        android:textStyle="bold"
        android:paddingTop="@dimen/textView_paddingSize"
        android:paddingRight="@dimen/textView_paddingSize"
        android:paddingBottom="@dimen/textView_paddingSize"
        android:paddingLeft="@dimen/textView_paddingSize"/>

</RelativeLayout>